# magi-server

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  server.py
.github/workflows/: build-and-publish.yml
